Added jumbotron and navigation

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
+    <title>Jon Goodan</title>
 </head>
 <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <div id="navigation">
+          <a id="navigation" href="#">About</a>
+          <a id="navigation" href="#">Work</a>
+          <a id="navigation" href="#">Contact</a>
+        </nav>
+    <div class="jumbotron">
+        <h1 class="display-4">Urban Peak</h1>
+        <p class="lead">My Role: UX/UI Design</p>
+        <hr class="my-4">
+        <p>Urban Peak is the only licensed shelter that is able to cater to youth who are homeless or experiencing other life challenges. Urban Peak provides a full range of services for youth (ages 15-20) and offers shelter, food, other basic needs, as well as equipping teenagers with educational and employment resources to ensure their success in the future.
+
+          Our redesign will focus on the user experience of both the desktop and mobile website. We want to make resources more readily available, easier to find, and provide more opportunities for users to take action online. </p>
+      </div>
+    <div class="jumbotron">
+      <img src="images/hero.png" class="card-img-top" alt="...">
+        <hr class="my-4">
+        <p>Research began with the stakeholder interview. Our stakeholder has worked with homeless youth for years and has a deep understanding what their needs are. She has 
+          also been involved with previous discussions about a website redesign. This type of information proved valuable for us as we developed an understanding of the website redesign and were able to cater quickly to their needs. </p>
+        <p class="lead">
+        </p>
+    </div>
     
 </body>
 </html>
