--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <p class="lead">My Role: UX/UI Design</p>
         <hr class="my-4">
         <p>Urban Peak is the only licensed shelter that is able to cater to youth who are homeless or experiencing other life challenges. Urban Peak provides a full range of services for youth (ages 15-20) and offers shelter, food, other basic needs, as well as equipping teenagers with educational and employment resources to ensure their success in the future.
-
-          Our redesign will focus on the user experience of both the desktop and mobile website. We want to make resources more readily available, easier to find, and provide more opportunities for users to take action online. </p>
+        </p>
+        <p>Our redesign will focus on the user experience of both the desktop and mobile website. We want to make resources more readily available, easier to find, and provide more opportunities for users to take action online. </p>
       </div>
     <div class="jumbotron">
       <img src="images/hero.png" class="card-img-top" alt="...">
@@ -81,9 +81,8 @@ also been involved with previous discussions about a website redesign. This type
         <div class="row rowbody"> 
           <div class="col-6 coltext">
             <h2>Final Design</h2>
-            <p>There were issues reaching our ideal target market in the current pandemic as well as legal/confidentiality obstacles working with youth under the age of 18.
+            <p>The many updates we’ve made to the current site can be synthesized into a few key takeaways which reflect our primary goals from the beginning of the design process. Our solution focuses on less decisions for users to make, a more straightforward and easy-to-use navigation, clear and accessible call-to-actions for those who need immediate help, and a hierarchy of content tailored to our specific targeted user. We received extremely positive feedback from our stakeholder, Kelsey, which in itself gives us a sense of fulfilment for the past 3 weeks of hard work. In the end, we can confidently present our redesign of Urban Peak’s website as a great improvement of the overall user experience.
             </p>
-            <p>We overcame this issue by using a quantitative survey published on Reddit, Facebook, and NextDoor, analyzing data from Urban Peak’s impact report, and an extensive interview with the stakeholder to gain insights and understand the previous discussions had. </p>
           </div>
         <div class="col-6">
         <img src="images/finalmockup.png" class="card-img-top" alt="...">
